--- a/index.html
+++ b/index.html
@@ -1,1 +1,43 @@
 
+<!DOCTYPE html>
+<html lang="it">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Pagina Random</title>
+  <style>
+    body {
+      background: linear-gradient(to right, #ffecd2, #fcb69f);
+      font-family: Arial, sans-serif;
+      text-align: center;
+      padding-top: 100px;
+      color: #333;
+    }
+    h1 {
+      font-size: 3em;
+      margin-bottom: 0.5em;
+    }
+    p {
+      font-size: 1.2em;
+    }
+    .btn {
+      margin-top: 30px;
+      padding: 12px 24px;
+      background-color: #ff6f61;
+      color: white;
+      border: none;
+      border-radius: 8px;
+      font-size: 1em;
+      cursor: pointer;
+    }
+    .btn:hover {
+      background-color: #e85c4f;
+    }
+  </style>
+</head>
+<body>
+  <h1>Benvenuto nella Pagina Random!</h1>
+  <p>Questa pagina non ha uno scopo preciso, ma almeno è carina 😄</p>
+  <button class="btn" onclick="alert('Hai premuto un bottone inutile!')">Cliccami</button>
+</body>
+</html>
