--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
-
 <!DOCTYPE html>
 <html lang="it">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pagina Random</title>
+  <title>Pagina Random + Notizie</title>
   <style>
     body {
       background: linear-gradient(to right, #ffecd2, #fcb69f);
       font-family: Arial, sans-serif;
       text-align: center;
-      padding-top: 100px;
+      padding: 50px 20px;
       color: #333;
     }
     h1 {
@@ -33,31 +32,64 @@
     .btn:hover {
       background-color: #e85c4f;
     }
+    #news {
+      margin-top: 50px;
+      text-align: left;
+      max-width: 800px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    .notizia {
+      background-color: #fff;
+      padding: 15px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+    }
+    .notizia h3 {
+      margin: 0;
+      font-size: 1.5em;
+    }
+    .notizia p {
+      margin: 5px 0;
+    }
+    .notizia a {
+      color: #ff6f61;
+      text-decoration: none;
+    }
   </style>
 </head>
 <body>
   <h1>Benvenuto nella Pagina Random!</h1>
   <p>Questa pagina non ha uno scopo preciso, ma almeno è carina 😄</p>
   <button class="btn" onclick="alert('Hai premuto un bottone inutile!')">Cliccami</button>
-  
-  fetch('https://nome-api.onrender.com/notizie?country=it&category=technology')
-    .then(response => response.json())
-    .then(data => {
-      const container = document.getElementById('news');
-      data.forEach(notizia => {
-        const div = document.createElement('div');
-        div.innerHTML = `
-          <h3>${notizia.titolo}</h3>
-          <p>${notizia.descrizione}</p>
-          <a href="${notizia.url}" target="_blank">Leggi di più</a>
-          <hr/>
-        `;
-        container.appendChild(div);
+
+  <h2 style="margin-top:60px;">Ultime Notizie</h2>
+  <div id="news">Caricamento...</div>
+
+  <script>
+    fetch('https://nome-api.onrender.com/notizie?country=it&category=technology')
+      .then(response => response.json())
+      .then(data => {
+        const container = document.getElementById('news');
+        container.innerHTML = '';
+        data.forEach(notizia => {
+          const div = document.createElement('div');
+          div.className = 'notizia';
+          div.innerHTML = `
+            <h3>${notizia.titolo}</h3>
+            <p>${notizia.descrizione || 'Nessuna descrizione disponibile.'}</p>
+            <p><strong>Fonte:</strong> ${notizia.fonte}</p>
+            <p><strong>Data:</strong> ${new Date(notizia.data).toLocaleString()}</p>
+            <a href="${notizia.url}" target="_blank">Leggi di più</a>
+          `;
+          container.appendChild(div);
+        });
+      })
+      .catch(error => {
+        document.getElementById('news').innerText = 'Errore nel caricamento delle notizie.';
+        console.error('Errore:', error);
       });
-    });
-
-  
-  <div id="news"></div>
-
+  </script>
 </body>
 </html>
