--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
     </script>
 <footer style="text-align:center; margin-top: 40px; padding: 20px; background:#222; color:white; font-size:14px;">
         Seguici su 
-        <a href="https://www.instagram.com" style="color:#E1306C; text-decoration:none; margin:0 10px;" target="_blank">Instagram</a> | 
+        <a href="https://www.instagram.com" style="color:#E1306C; text-decoration:none; margin:0 10px;" target="_blank"><a href="https://www.instagram.com" target="_blank"><img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram" style="height:24px;"></a></a> | 
         <a href="https://www.twitter.com" style="color:#1DA1F2; text-decoration:none; margin:0 10px;" target="_blank">X</a>
-<div style="margin-top:10px;">© 2024 Notizie Globali</div>
+<div style="margin-top:10px;">© 2025 Notizie Globali</div>
 </footer>
 </body>
 </html>
